--- a/Flask_init_con/templates/index.html
+++ b/Flask_init_con/templates/index.html
@@ -26,6 +26,12 @@
         <br>
         <br>
 
+        <form action="/upload" method="POST" enctype="multipart/form-data">
+          <label for="file">File:</label>
+          <input type="file" id="file" name="file"><br />
+          <button>Upload</button>
+        </form>
+
     </body>
 
 </html>
