--- a/webApp/views/home.html
+++ b/webApp/views/home.html
@@ -33,7 +33,7 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
+              <a class="nav-link active" href="#">Home</a>
               <a class="nav-link" href="#">Employees</a>
               <a class="nav-link" href="#">Vehicles</a>
             </div>
@@ -47,7 +47,7 @@
     <section id="home">
         <section id="routes">
             <div id="left">
-                <div style="width: 100%"><iframe width="100%" height="600" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?width=100%25&amp;height=600&amp;hl=es&amp;q=Les%20Rambles,%201%20Barcelona,%20Spain+(Mi%20nombre%20de%20egocios)&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"><a href="https://www.gps.ie/car-satnav-gps/">Car GPS</a></iframe></div>
+              <div style="width: 100%"><iframe width="100%" height="600" src="/map1.html" frameborder="0"></iframe></div>
             </div>
             <div id="right">
                 <div class="container">
