translate some words

--- a/webApp/views/employees.html
+++ b/webApp/views/employees.html
@@ -96,8 +96,8 @@
                           </td>
                           <td>
                             <a href="/update/<%= curso[i].id_curso%>/<%=curso[i].nombre%>/<%= curso[i].descripcion%>"
-                              class="btn-options btn btn-info">Editar</a>
-                            <a href="/delete/<%= curso[i].id_curso %>" class="btn-options btn btn-danger">Eliminar</a>
+                              class="btn-options btn btn-info">Edit</a>
+                            <a href="/delete/<%= curso[i].id_curso %>" class="btn-options btn btn-danger">Delete</a>
                           </td>
                         </tr>
                         <!-- <% } %>
