--- a/Flask_Backend/app/templates/index.html
+++ b/Flask_Backend/app/templates/index.html
@@ -27,9 +27,18 @@
             <input type="text" class="form-control" name="phone" placeholder="Phone">
           </div>
           <button class="btn btn-primary btn-block">
-            Save 
+            Save2
           </button>
         </form>
+
+
+        <form action="{{url_for('employees.run_script')}}" method="POST">
+          <button class="btn btn-primary btn-block">
+            RUN SCRIPT
+          </button>
+        </form>
+
+
       </div>
     </div>
     <div class="col-md-7">
