--- a/webApp/templates/home.html
+++ b/webApp/templates/home.html
@@ -19,16 +19,14 @@
   <!-- Scripts -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
   <title>Home</title>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-  <link rel="stylesheet" href="/static/css/home.css">
-
+  <link rel="stylesheet" href="/webApp/public/css/home.css">
 </head>
 <body>
     <nav class="navbar navbar-light mo-navba navbar-expand-lg">
         <div class="container">
           <a class="navbar-brand" href="/">
             <!-- <span id="title">Pruebas.py</span> -->
-            <img id="logo" src="/static/src/logo_light.png" alt="">
+            <img id="logo" src="/webApp/public/src/logo_light.png" alt="">
           </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -46,14 +44,7 @@
         </div>
       </nav>   
     <!--  Home Section -->
-
     <section id="home">
-      <script>
-        $.ajax({
-          url: "routesgenerator.py",
-            context: document.body
-        })
-      </script>
         <section id="routes">
             <div id="left">
               <div style="width: 100%"><iframe width="100%" height="600" src="/map1.html" frameborder="0"></iframe></div>
