--- a/webApp/templates/employees.html
+++ b/webApp/templates/employees.html
@@ -19,23 +19,23 @@
   <!-- Scripts -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
   <title>Employees</title>
-  <link rel="stylesheet" href="/webApp/public/css/home.css">
+  <link rel="stylesheet" href="/webApp/static/css/home.css">
 </head>
 <body>
     <nav class="navbar navbar-light mo-navba navbar-expand-lg">
         <div class="container">
           <a class="navbar-brand" href="/">
             <!-- <span id="title">Pruebas.py</span> -->
-            <img id="logo" src="/webApp/public/src/logo_light.png" alt="">
+            <img id="logo" src="/webApp/static/src/logo_light.png" alt="">
           </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
-              <a class="nav-link" href="#">Home</a>
+              <a class="nav-link" href="/home">Home</a>
               <a class="nav-link active" href="#">Employees</a>
-              <a class="nav-link" href="#">Vehicles</a>
+              <a class="nav-link" href="/vehicles">Vehicles</a>
             </div>
           </div>
           <form class="d-flex" role="search">
@@ -79,29 +79,27 @@
                     </tr>
                   </thead>
                   <tbody>
-                    <!-- <% if (curso) { %>
-                      <% for(var i=0; i < curso.length; i++) { %> -->
+                    <!-- {% for employee in employees %} -->
                         <tr>
                           <td>
-                            <!-- <%= (i + 1) %> -->
+                            <!-- {{employee.id_trabajador}} -->
                           </td>
                           <td>
-                            <!-- <%= curso[i].nombre %> -->
+                            <!-- {{employee.nombre}} -->
                           </td>
                           <td>
-                            <!-- <%= curso[i].descripcion %> -->
+                            <!-- {{employee.longitud}} -->
                           </td>
                           <td>
-                            <!-- <%= curso[i].descripcion %> -->
+                            <!-- {{employee.latitud}} -->
                           </td>
                           <td>
-                            <a href="/update/<%= curso[i].id_curso%>/<%=curso[i].nombre%>/<%= curso[i].descripcion%>"
+                            <a href="/edit/{{employee.id_empresa}}"
                               class="btn-options btn btn-info">Edit</a>
-                            <a href="/delete/<%= curso[i].id_curso %>" class="btn-options btn btn-danger">Delete</a>
+                            <a href="/delete/{{employee.id_empresa}}" class="btn-options btn btn-danger">Delete</a>
                           </td>
                         </tr>
-                        <!-- <% } %>
-                          <% } %> -->
+                    <!-- {% endfor %}  -->
                   </tbody>
                 </table>
               </div>
