--- a/webApp/templates/home.html
+++ b/webApp/templates/home.html
@@ -19,14 +19,14 @@
   <!-- Scripts -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
   <title>Home</title>
-  <link rel="stylesheet" href="/webApp/public/css/home.css">
+  <link rel="stylesheet" href="/static/css/home.css">
 </head>
 <body>
     <nav class="navbar navbar-light mo-navba navbar-expand-lg">
         <div class="container">
           <a class="navbar-brand" href="/">
             <!-- <span id="title">Pruebas.py</span> -->
-            <img id="logo" src="/webApp/public/src/logo_light.png" alt="">
+            <img id="logo" src="/static/src/logo_light.png" alt="">
           </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -34,8 +34,8 @@
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
               <a class="nav-link active" href="#">Home</a>
-              <a class="nav-link" href="#">Employees</a>
-              <a class="nav-link" href="#">Vehicles</a>
+              <a class="nav-link" href="/employees">Employees</a>
+              <a class="nav-link" href="/vehicles">Vehicles</a>
             </div>
           </div>
           <form class="d-flex" role="search">
@@ -47,42 +47,10 @@
     <section id="home">
         <section id="routes">
             <div id="left">
-              <div style="width: 100%"><iframe width="100%" height="600" src="/map1.html" frameborder="0"></iframe></div>
+              <div style="width: 100%"><iframe width="100%" height="600" src="/static/map1.html" frameborder="0"></iframe></div>
             </div>
             <div id="right">
-                <div class="container">
-                    <div class="row">
-                      <div class="col-md-12">
-                        <table class="table table-bordered table-hover">
-                          <thead>
-                            <tr>
-                                <td>Vehicle</td>
-                                <td>ID</td>
-                                <td>Nombre</td>
-                                <td>Hora</td>
-                            </tr>
-                          </thead>
-                          <tbody>
-                            <!-- <% if (curso) { %>
-                              <% for(var i=0; i < curso.length; i++) { %> -->
-                                <tr>
-                                  <td>
-                                    <!-- <%= (i + 1) %> -->
-                                  </td>
-                                  <td>
-                                    <!-- <%= curso[i].nombre %> -->
-                                  </td>
-                                  <td>
-                                    <!-- <%= curso[i].descripcion %> -->
-                                  </td>
-                                </tr>
-                                <!-- <% } %>
-                                  <% } %> -->
-                          </tbody>
-                        </table>
-                      </div>
-                    </div>
-                  </div>
+              <div style="width: 100%"><iframe width="100%" height="600" src="/static/Itinerario.html" frameborder="0"></iframe></div> 
             </div>
         </section>
     </section>
