--- a/webApp/templates/login.html
+++ b/webApp/templates/login.html
@@ -19,7 +19,7 @@
   <!-- Scripts -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
   <title>Login</title>
-  <link rel="stylesheet" href="/static/css/login.css">
+  <link rel="stylesheet" href="/webApp/static/css/login.css">
 </head>
 <body>
     <!-- Login Section -->
